# multi-agent-page-sorter

./: .gitignore  LICENSE  README.md  default_prompts.toml  project_config.toml  prompt_demo.py  pyproject.toml  wordware_test.py
src/: agent.py  config.py  consortium.py  llm.py  page_consortium.py  prompt.py
