[tool.poetry]
name = "multi-agent-page-sorter"
package-mode=false
version = "0.1.0"
description = "Coordinates multiple LLMs to sort an unordered collection of pages."
authors = ["Samuel Gillespie <samuel.gillespie@sydney.edu.au>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
toml = "^0.10.2"
requests = "^2.32.3"


[tool.poetry.group.dev.dependencies]
ruff = "^0.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
