[project]
name = "multi-agent-page-sorter"
version = "0.1.0"
description = "Coordinates multiple LLMs to sort an unordered collection of pages."
authors = [{ name = "Samuel Gillespie", email = "samuel.gillespie@sydney.edu.au" }]
requires-python = "~=3.11"
readme = "README.md"
license = "MIT"
dependencies = [
    "toml>=0.10.2,<0.11",
    "requests>=2.32.3,<3",
]

[dependency-groups]
dev = ["ruff>=0.5.1,<0.6"]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
